feat: implement BootstrapCarousel component; minor fixes

--- a/index.html
+++ b/index.html
@@ -206,14 +206,8 @@
                 <div class="subtitle-container">
                     <h4 class="subtitle">Specialties</h4>
                 </div>
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div id="carouselSpecialties" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators specialties__carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0"
-                            class="active carousel-controls-panel__control"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"
-                            class="carousel-controls-panel__control"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"
-                            class="carousel-controls-panel__control"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
