--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
                 </div>
                 <div class="menu__nav-container">
                     <ul class="menu__nav">
-                        <li class="menu__link_active">Pizza</li>
-                        <li>Soup</li>
-                        <li>Pasta</li>
-                        <li>Desert</li>
-                        <li>Wine</li>
-                        <li>Beer</li>
-                        <li>Drinks</li>
+                        <li class="menu__link menu__link_active">Pizza</li>
+                        <li class="menu__link">Soup</li>
+                        <li class="menu__link">Pasta</li>
+                        <li class="menu__link">Desert</li>
+                        <li class="menu__link">Wine</li>
+                        <li class="menu__link">Beer</li>
+                        <li class="menu__link">Drinks</li>
                     </ul>
                 </div>
                 <div class="menu__table layout-3-columns">
